fix gap between title and date in list

--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -25,7 +25,7 @@
 
 .post-title {
     font-size: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .related-column .post-title {
@@ -33,7 +33,7 @@
 }
 
 .post-header {
-    margin-bottom: 1em;
+    margin-bottom: 0;
 }
 
 /* title in list */
